# diddy-bot

./: bootstrap.py  main.py  minimal-with-logging.py  minimal.py  pyproject.toml  requirements.txt
temp_libraries/: .secrets.py.swp  monkey_patch.py  resolvers.py  secrets.py
