[tool.poetry]
name = "didcomm-book-demo"
version = "0.1.0"
description = ""
authors = ["Colton Wolkins (Indicio work address) <colton@indicio.tech>"]
readme = "README.md"
#packages = [{include = "didcomm_book_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
didcomm = "^0.3.1,<0.3.2"
did-peer-4 = "^0.1.0.post0"
flake8 = "^6.1.0"
pynacl = "^1.5.0"
did-peer-2 = "^0.1.0"
requests = "^2.31.0"
websockets = "^12.0"
didcomm-messaging = {extras = ["askar"], version = "^0.1.0a1", allow-prereleases = true}
aiohttp = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
